[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/transition.gd" type="Script" id=1]
[ext_resource path="res://Assets/icon.png" type="Texture" id=2]
[ext_resource path="res://Assets/fonts/lato.tres" type="DynamicFont" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/fonts/raw/Lato-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 1
outline_color = Color( 0.384314, 0.364706, 0.364706, 1 )
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
outline_size = 1
outline_color = Color( 0.384314, 0.364706, 0.364706, 1 )
font_data = SubResource( 1 )

[node name="transition" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_left = 36.0
margin_top = 18.0
margin_right = -589.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 3 )
text = "We survived another night"
valign = 1

[node name="nextLevel" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -97.0
margin_top = -55.7825
margin_right = 97.0
margin_bottom = -15.7825
custom_fonts/font = SubResource( 2 )
text = "NEXT LEVEL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mainMenu" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -97.0
margin_top = -55.7825
margin_right = 97.0
margin_bottom = -15.7825
custom_fonts/font = SubResource( 2 )
text = "Main menu"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 60.0
margin_top = -163.0
margin_right = 522.0
margin_bottom = 230.0
custom_fonts/normal_font = SubResource( 3 )
text = "We get to live another day. It seems that no matter how much we progress we are still so far away from our destination.
We don't even know if the trip would be worth it, for all we know the colony might have been invaded by this things and we would only get to see another pile pf deformed corpses.
I must stay strong for mu daughter."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="beauitifulMap" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -497.0
margin_top = 105.0
margin_right = -24.0
margin_bottom = -74.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="locationMarker" type="TextureRect" parent="beauitifulMap"]
visible = false
self_modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 4
[connection signal="pressed" from="nextLevel" to="." method="_on_nextLevel_pressed"]
[connection signal="pressed" from="mainMenu" to="." method="_on_mainMenu_pressed"]
